# django-react-e-commerce

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  settings.py  urls.py
backend/backend/: settings.py  urls.py
backend/base/: serializers.py  signals.py  urls.py  views.py
backend/base/migrations/: 0003_alter_order_table_alter_orderitem_table_and_more.py
backend/base/urls/: order_urls.py  product_urls.py  user_urls.py
backend/base/views/: order_views.py  product_views.py  user_views.py
base/: admin.py  models.py  products.py
base/migrations/: 0001_initial.py  0002_order_shippingaddress_review_orderitem.py
base/urls/: order_urls.py  product_urls.py
base/views/: product_views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  products.js  store.js
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/components/: CheckoutSteps.js  Footer.js  FormContainer.js  Header.js  Loader.js  Paginate.js  Product.js  ProductCarousel.js  Review.js  SearchBox.js
frontend/src/constants/: orderConstants.js  productConstants.js
frontend/src/reducers/: cartReducers.js  orderReducers.js  productReducers.js  userReducers.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  LoginScreen.js  OrderListScreen.js  OrderScreen.js  PaymentScreen.js  PlaceOrderScreen.js  ProductEditScreen.js  ProductListScreen.js  ProductScreen.js  ProfileScreen.js  RegisterScreen.js  ShippingScreen.js  UserEditScreen.js  UserListScreen.js
