[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hamza Farooq <farooqhamza61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.4"
djangorestframework = "3.14.0"
Pillow = "10.0.0"
psycopg2-binary = "2.9.7"
autopep8 = "^2.0.4"
django-cors-headers = "^4.3.0"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
